# shorty-factory

./: .env.example  .gitignore  IMPLEMENTATION_GUIDE.md  N8N_SETUP.md  README.md  main.py  pyproject.toml
app/: config.py  db.py  exceptions.py  storage.py
app/api/: main.py  routes.py  schemas.py
app/graph/: composer.py  graph.py  meta_ai.py  music.py  state.py  stitcher.py
app/graph/composers/: __init__.py  narrative.py  top5.py
app/graph/storyboards/: __init__.py  base.py  narrative.py  top5.py
app/jobs/: events.py  models.py  runner.py  store.py
app/pipeline/: mux.py  stitch.py
app/providers/music/: __init__.py  base.py  local.py  musicgen.py
app/providers/video/: __init__.py  base.py  meta_ai.py
scripts/: capture_session.py
