[project]
name = "shorty-factory"
version = "0.1.0"
description = "Compose 6-8 connected Meta AI video clips into a vertical short, served via FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "playwright>=1.48",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langgraph>=0.2.50",
    "tenacity>=9.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
